fix client logo div width (was extending off screen making the screen horizontally scrollable)

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -650,6 +650,11 @@ font-style: normal;
 font-size: 18px;
 }
 
+#clientcontainer {
+ width: 100vw;
+ overflow: hidden;
+}
+
 #clientlist {
   height: 90px;
   width: 8596px;
